--- a/views/complaints.ejs
+++ b/views/complaints.ejs
@@ -64,10 +64,10 @@
         </select>
       </div>
 
-      <div class="form-group">
-        <label>
-          <input type="checkbox" name="urgent" value="true">
-          <span>This is an urgent issue requiring immediate attention</span>
+      <div class="form-group checkbox-group">
+        <label class="checkbox-label">
+          <input type="checkbox" name="urgent" value="true" class="checkbox-input">
+          <span class="checkbox-text">This is an urgent issue requiring immediate attention</span>
         </label>
       </div>
 
@@ -806,6 +806,37 @@ document.getElementById('details').addEventListener('input', function() {
   display: block;
   max-width: 80%;
   max-height: 80%;
+}
+
+.checkbox-group {
+  margin: 25px 0;
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  cursor: pointer;
+  line-height: 1.5;
+}
+
+.checkbox-input {
+  width: 18px;
+  height: 18px;
+  margin: 0;
+  flex-shrink: 0;
+  /* margin-top: 2px;  Align with first line of text */
+}
+
+.checkbox-text {
+  flex: 1;
+  font-size: 16px;
+  color: #333;
+  user-select: none;
+}
+
+.checkbox-label:hover .checkbox-text {
+  color: var(--primary-red);
 }
 
 #caption {
